# glost

./: .gitignore  Cargo.toml  README.md  SUMMARY.md  build.rs  sample.txt
.github/workflows/: ci.yml
assets/: app.js  index.html  style.css
src/: cli.rs  commands.rs  config.rs  content.rs  filter.rs  flashcards.rs  glossary.rs  kaikki.rs  language.rs  lib.rs  main.rs  server.rs  youtube.rs
src/kaikki/: mod.rs
tests/: flashcard_tests.rs  server_tests.rs
ui/: app.slint  bookshelf.slint
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/flashcards/: page.tsx
web/src/app/flashcards/review/: page.tsx
web/src/app/read/[path]/: page.tsx
web/src/app/stats/: page.tsx
web/src/components/: Sidebar.tsx
yt_transcript_fetcher/: Cargo.toml
yt_transcript_fetcher/src/: lib.rs
